<?xml version="1.0"?>
<package format="2">
  <name>compliance</name>
  <version>0.0.0</version>
  <description>The compliance package</description>

  <maintainer email="andyz@utexas.edu">AndyZe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>moveit_ros_manipulation</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
  </export>
</package>
